--- a/style.css
+++ b/style.css
@@ -1,4 +1,36 @@
-.cabecalho{
-    background-color: aqua;
+body{
+    background: #4e8774;
+}
+h1{
+    text-align: center;
+    font-size: 40px;
+    color: #a02822
+}
+p{
+    text-align: center;
+    font-size: 30px;
+    color: #a02822;
+}
+img{
+    width: 300px;
+    margin-left: 100px;
+}
+
+.cabeçalho{
+    background-color: rgb(71, 117, 223);
     display: flex;
+}
+.logocabeçalho{
+    width: 100px
+}
+.lista_de_cabeçalho{
+    display: flex;
+    margin-left: 500px;
+}
+.item_lista_cabeçalho{
+    color: #a02822;
+    list-style: none;
+    text-transform: uppercase;
+    font-size: 10px;
+    padding: 5px;
 }
