--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ img{
 }
 .logocabeçalho{
     width: 100px;
-    border-radius: 50px;
+    border-radius: 50%;
 }
 .lista_de_cabeçalho{
     display: flex;
