--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: #0059ff;
+    background: rgb(255, 255, 255);
 }
 h1{
     text-align: center;
@@ -17,7 +17,7 @@ img{
 }
 
 .cabeçalho{
-    background-color:rgb(0, 47, 255);
+    background-color:rgb(180, 167, 167);
     display: flex;
 }
 .logocabeçalho{
